Documents/MetaDataIO/MetadataIO-distr-33.0.3-bin/repos/src/objects/SFDC_520_Approval_Request__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Action__c</fullName>
        <formula>HYPERLINK(s_Servlet_Directory__c&amp;&quot;01No0000000GvXl&amp;eid=&quot;&amp;Id, IMAGE(s_Document_Directory__c&amp;&quot;015o0000000LqGx&quot;, &quot;Approve&quot;) ) &amp; HYPERLINK(s_Servlet_Directory__c&amp;&quot;01No0000000GvXm&amp;eid=&quot;&amp;Id, IMAGE(s_Document_Directory__c&amp;&quot;015o0000000LqGy&quot;, &quot;Reject&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>SFDC_520_Quote__c</referenceTo>
        <relationshipLabel>Approval Requests</relationshipLabel>
        <relationshipName>R00No0000000pc89EAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requested_Date__c</fullName>
        <label>Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Result_Date__c</fullName>
        <label>Result Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add&apos;l Info Needed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approved / Denied By</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Approval Requests</relationshipLabel>
        <relationshipName>R00No0000000pc6sEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>s_Document_Directory__c</fullName>
        <formula>&quot;/servlet/servlet.FileDownload?file=&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>s_Document Directory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>s_Servlet_Directory__c</fullName>
        <description>Stores the servlet location which is substituted in formula fields.</description>
        <formula>&quot;/servlet/servlet.Integration?lid=&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>s_Servlet Directory</label>
        <type>Text</type>
    </fields>
    <label>Approval Request</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AR-{00000000}</displayFormat>
        <label>Approval Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>